# jurny

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  REFRACTOR_PLAN.md  outline.md
.github/workflows/: ci.yml
cmake/: FetchDeps.cmake  Sanitizers.cmake  Shaders.cmake  Warnings.cmake
data/: materials.json
docs/: 01-repository-layout.md  02-build-system-and-dependencies.md  03_architecture_overview.md  04_spherical_world_math.md  05_gpu_world_allocator.md  part0_scope_and_goals.md
shaders/: avatar.frag  avatar.vert  common.glsl  composite.comp  crosshair.comp  denoise_atrous.comp  denoise_spatial.comp  first_pixels.comp  generate_rays.comp  overlay.comp  sdf_update.comp  shade.comp  shell_visual.comp  spherical.glsl  traverse_bricks.comp  updates_apply.comp
shaders/include/: brick_formats.glsl  common.glsl
src/: CMakeLists.txt  main.cpp
src/app/: App.cpp  App.h  Input.cpp  Input.h  UI.cpp  UI.h
src/core/: Assets.cpp  Assets.h  Debug.cpp  Debug.h  Descriptors.cpp  Descriptors.h  FrameGraph.cpp  FrameGraph.h  GpuAllocator.cpp  GpuAllocator.h  GpuTimers.cpp  GpuTimers.h  Jobs.cpp  Jobs.h  Logging.cpp  Logging.h  Pipelines.cpp  Pipelines.h  Upload.cpp  Upload.h
src/math/: Camera.cpp  Camera.h  RNG.cpp  RNG.h  Spherical.cpp  Spherical.h
src/platform/: Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  Window.cpp  Window.h
src/render/: Denoiser.cpp  Denoiser.h  GpuBuffers.cpp  GpuBuffers.h  MeshRenderer.cpp  MeshRenderer.h  Overlays.cpp  Overlays.h  Raytracer.cpp  Raytracer.h  Tonemap.cpp  Tonemap.h  VulkanUtils.cpp  VulkanUtils.h
src/sim/: Collide.cpp  Collide.h  Fluids.cpp  Fluids.h
src/tools/: Capture.cpp  Capture.h  Inspect.cpp  Inspect.h
src/world/: BrickFormats.h  BrickStore.cpp  BrickStore.h  CoordUtils.h  MacroMask.cpp  MacroMask.h  Materials.cpp  Materials.h  RegionCache.cpp  RegionCache.h  Streaming.cpp  Streaming.h  WorldGen.cpp  WorldGen.h
tests/: BrickTests.cpp  CMakeLists.txt  HashTests.cpp  MathTests.cpp  StreamingTests.cpp
tools/debug_dump/: CMakeLists.txt  dump_brick.cpp
tools/git-hooks/: pre-commit
tools/pack_assets/: CMakeLists.txt  pack_assets.cpp
tools/shaderc_build/: CMakeLists.txt  compile_shaders.py  shader_pch.glsl
tools/telemetry/: README.md
