file(GLOB TEST_SRC CONFIGURE_DEPENDS *.cpp)
foreach(src ${TEST_SRC})
  get_filename_component(name ${src} NAME_WE)
  set(tgt ${name}_test)
  add_executable(${tgt} ${src})
  target_include_directories(${tgt} PRIVATE ${CMAKE_SOURCE_DIR}/src)
  target_link_libraries(${tgt} PRIVATE voxel_math voxel_world voxel_core)
  voxel_set_warnings(${tgt})
  voxel_enable_sanitizers(${tgt})
  add_test(NAME ${tgt} COMMAND ${tgt})
endforeach()
